add instruction for uenv

--- a/resources/inference/sandbox/readme.md.jinja2
+++ b/resources/inference/sandbox/readme.md.jinja2
@@ -16,7 +16,7 @@ It is not intended to be used for production, but only as a development and test
 ## Usage
 {% if image %}
 To set up your python environment, you have two options: using the squashfs image (on Alps) or creating your own virtual environment.
-Coming soon..
+To use the squashfs image, have a look at the [CSCS documentation](https://docs.cscs.ch/guides/storage/#step-3-use-the-squashfs).
 {% endif %}
 To install the environment, run `uv sync`. Then activate it with `source .venv/bin/activate`.
 You can now run a model with `anemoi-inference run config/config.yaml` (don't forget to do it on a GPU compute node).
