--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -114,9 +114,12 @@
             <div class="control-group">
                 <label>Metric(s)</label>
                 <select id="metric-select" multiple>
-                    <option value="RMSE" selected>RMSE</option>
                     <option value="BIAS" selected>BIAS</option>
+                    <option value="RMSE" selected>RMSE</option>
+                    <option value="STDE" selected>STDE</option>
                     <option value="MAE" selected>MAE</option>
+                    <option value="CORR" selected>CORR</option>
+                    <option value="R2" selected>CORR</option>
                 </select>
             </div>
             <div class="control-group">
