Use source as an internal key for experiments/analysis labels

--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -104,10 +104,10 @@
 
         <div class="controls">
             <div class="control-group">
-                <label>Model(s)</label>
-                <select id="model-select" multiple>
-                    {% for model in models %}
-                    <option value="{{model}}" selected>{{model}}</option>
+                <label>Source(s)</label>
+                <select id="source-select" multiple>
+                    {% for source in sources %}
+                    <option value="{{source}}" selected>{{source}}</option>
                     {% endfor %}
                 </select>
             </div>
