Add start and end dates for reports dashboard

--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -101,7 +101,13 @@
 
     <!-- First tab -->
     <div id="tab1" class="tab-content active">
-
+        <div class="header">
+            <h1>Verification dashboard</h1>
+            <p>
+            Explore verification metrics across different sources, parameters, and metrics.
+            Initializations used: {{start}} to {{end}} every {{frequency}}.
+            </p>   
+        </div>
         <div class="controls">
             <div class="control-group">
                 <label>Source(s)</label>
