Add range of initialization times used for evaluation
Squashed commit of the following:

commit 40271ee48af3a820cc8d4b79a35da9f1cbd10474
Author: Jonas Bhend <jonas.bhend@meteoswiss.ch>
Date:   Thu Aug 21 16:37:09 2025 +0200

    remove trailing whitespaces

commit 3a7635fd7b448a483e30c14f0f6735a3d9a2d653
Author: Jonas Bhend <jonas.bhend@meteoswiss.ch>
Date:   Thu Aug 21 16:32:52 2025 +0200

    simplified initializations text

commit 21bce8a2c91712e807c973e4b05b2f0da13dfa73
Author: Jonas Bhend <jonas.bhend@meteoswiss.ch>
Date:   Thu Aug 21 16:28:05 2025 +0200

    Add start and end dates for reports dashboard

--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -101,7 +101,11 @@
 
     <!-- First tab -->
     <div id="tab1" class="tab-content active">
-
+        <div class="header">
+            <p>
+            Initializations used: {{start}} to {{end}} every {{frequency}}.
+            </p>
+        </div>
         <div class="controls">
             <div class="control-group">
                 <label>Source(s)</label>
