exclude metrics from being selected by default

--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -115,7 +115,7 @@
                 <label>Metric(s)</label>
                 <select id="metric-select" multiple>
                     {% for metric in metrics %}
-                    <option value="{{metric}}" selected>{{metric}}</option>
+                    <option value="{{metric}}">{{metric}}</option>
                     {% endfor %}
                 </select>
             </div>
