reduce number of arguments to pass.

--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -103,7 +103,7 @@
     <div id="tab1" class="tab-content active">
         <div class="header">
             <p>
-            Initializations used: {{start}} to {{end}} every {{frequency}}.
+            {{header_text}}
             </p>
         </div>
         <div class="controls">
