--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -108,7 +108,7 @@
         </div>
         <div class="controls">
             <div class="control-group">
-                <label>Regions(s)</label>
+                <label>Region</label>
                 <select id="region-select">
                     {% for region in regions %}
                     <option value="{{region}}"{% if region == 'all' %} selected{% endif %}>{{region}}</option>
