--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -101,11 +101,6 @@
 
     <!-- First tab -->
     <div id="tab1" class="tab-content active">
-        <div class="header">
-            <p>
-            {{header_text}}
-            </p>
-        </div>
         <div class="controls">
             <div class="control-group">
                 <label>Region</label>
@@ -150,6 +145,10 @@
 
     <script id="verif-data" type="application/json">
         {{ verif_data | safe | indent(8, false)}}
+    </script>
+
+    <script id="header-text" type="text">
+        {{ header_text }}
     </script>
 
     <script>
