--- a/resources/mec/namelist.jinja2
+++ b/resources/mec/namelist.jinja2
@@ -1,5 +1,5 @@
 !==============================================================================
-! namelist for MEC
+! namelist template for MEC
 !==============================================================================
 
  !===================
@@ -12,12 +12,12 @@
    data           = '/oprusers/osm/opr.emme/data/'      ! data path for auxiliary data
    obsinput       = './input_obs'                 ! observation input data path
    output         = './output'                    ! output data to working directory
-   time_ana       = 20201028000000                  ! analysis date
+   time_ana       = {{ init_time }}00             ! analysis date YYYYMMDDHHMMSS
    read_fields    = 'ps u t v q geof t2m td2m u_10m v_10m'
    grib_edition   = 2
    grib_library   = 2                             ! GRIB-API used: 1=GRIBEX  2=GRIB2-API
    cosmo_refatm   = 2                             ! reference atmosphere to be used for COSMO:1or2
-   fc_hours       = 0                                             ! Default is 3h. Has to be set to 0 if one wants to verify +0h leadtime
+   fc_hours       = 0                             ! Default is 3h. Has to be set to 0 if one wants to verify +0h leadtime
    nproc1         = 1
    nproc2         = 1
  /
@@ -51,17 +51,13 @@
  !================================
  &veri_obs
   obstypes      = "SYNOP"      ! "SYNOP TEMP"
-  fc_times      = 0000,1200,2400,3600,4800,6000,7200,8400,9600,10800,12000  ! forecast lead time at reference (hhmm)
+  fc_times      = {{ leadtimes }} ! forecast lead time at reference (hhmm) 0000,1200,2400,...  
   prefix_in     = 'ekf'                                                                                                                                                                                           
   prefix_out    = 'ver'               
   rm_old        = 2                          ! overwrite entries in verification file ?
-  fc_file       = '_FCR_TIME_/lfffDDVVMMSS'  ! template for forecast file name
-  !det_suffix    = '.m000'   ! for ensemble forecast must be set in order to differentiate between the input model files.
+  fc_file       = '_FCR_TIME_/lfffDDVVMMSS'  ! template for forecast file name TODO: adapt to new structure!
   time_range    = 1                                                                                                                                                                                               
   ekf_concat    = F                                                                                                                                                                                               
-  !ekf_rm_ve     =  -2 -7   ! special (<0) member ids to remove 
-  !eps_offset    = 40   ! skip the first members up to this value to which is set. The default is 0
-  !ekf_offset    = 40   ! exclude members in ekf-file up to this value => try setting to 40? => no effect => ask Hendrik?
   ref_runtype   = 'any'  ! accept any runtype for the reference state
  /
 
@@ -76,6 +72,6 @@
    verification_end   =  30       ! (min, inclusive)
  /
  &synop_obs
-   version = 1   ! Harald: Für version >= 3 werden konsistent die DACE-internen Kontrollvariablen genutzt, mit ggf. Umrechnung tv,rh <-> t,td etc. DACE-Version mind. 2.22 . Random crashes (T=10000 Umrechnungen failen). Need of no undefs for version=3 
+   version = 1  
  /
  
