--- a/resources/mec/namelist.jinja2
+++ b/resources/mec/namelist.jinja2
@@ -55,7 +55,7 @@
   prefix_in     = 'ekf'                                                                                                                                                                                           
   prefix_out    = 'ver'               
   rm_old        = 2                          ! overwrite entries in verification file ?
-  fc_file       = '_FCR_TIME_/lfffDDVVMMSS'  ! template for forecast file name TODO: adapt to new structure!
+  fc_file       = 'fc__FCR_TIME'  ! template for forecast file name
   time_range    = 1                                                                                                                                                                                               
   ekf_concat    = F                                                                                                                                                                                               
   ref_runtype   = 'any'  ! accept any runtype for the reference state
