--- a/resources/report/dashboard/template.html.jinja2
+++ b/resources/report/dashboard/template.html.jinja2
@@ -95,7 +95,7 @@
     <div class="header">
         <div class="tab-buttons">
             <button class="tab-link active" data-tab="tab_scores">Standard verification</button>
-            <button class="tab-link" data-tab="tab_config">Config file</button>
+            <button class="tab-link" data-tab="tab_config">Config</button>
         </div>
     </div>
 
