model data preparation for MEC

--- a/resources/mec/namelist.jinja2
+++ b/resources/mec/namelist.jinja2
@@ -52,7 +52,7 @@
  &veri_obs
   obstypes      = "SYNOP"         ! "SYNOP TEMP"
   fc_times      = {{ leadtimes }} ! forecast lead time at reference (hhmm) 0000,1200,2400,...
-  prefix_in     = 'ekf'           ! prefix for input files. ekf or mon
+  prefix_in     = 'mon'           ! prefix for input files. ekf or mon
   prefix_out    = 'ver'
   rm_old        = 2                  ! overwrite entries in verification file ?
   fc_file       = 'fc__FCR_TIME_00'  ! template for forecast file name
